--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -10,3 +10,7 @@ db.default=${DATABASE_URL}
 slick.dbs.default.driver="slick.jdbc.PostgresProfile$"
 slick.dbs.default.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
 slick.dbs.default.db.properties.driver = "org.postgresql.Driver"
+
+
+#Security Headers
+contentSecurityPolicy = "img-src *"
