Maybe has the csr working?

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -13,4 +13,4 @@ slick.dbs.default.db.properties.driver = "org.postgresql.Driver"
 
 
 #Security Headers
-contentSecurityPolicy = "img-src *"
+contentSecurityPolicy = "img-src '*'"
