adding host. should then be active

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -27,4 +27,7 @@ play.filters {
 	headers {
 		contentSecurityPolicy = "img-src *"
 	}
+	hosts {
+		allowed = ["tedxtrinityuniversity.com","www.tedxtrinityuniversity.com"]
+	}
 }
