Now only server-side project

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,7 +16,7 @@ play.modules {
 
 
 
-db.default=${DATABASE_URL}
+#db.default=${DATABASE_URL}
 slick.dbs.default.driver="slick.jdbc.PostgresProfile$"
 slick.dbs.default.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
 slick.dbs.default.db.properties.driver = "org.postgresql.Driver"
